force-app/main/default/objects/Policy_Premium_History__c/Policy_Premium_History__c.object-meta.xml
<CustomObject>
    <label>Policy Premium History</label>
    <nameField>
        <displayFormat>PH-{000000}</displayFormat>
        <label>Premium History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Premium History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>