force-app/main/default/objects/Policy_Premium_History__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bound</fullName>
            </value>
            <value>
                <fullName>Add Lawyer</fullName>
            </value>
            <value>
                <fullName>Delete Lawyer</fullName>
            </value>
            <value>
                <fullName>IL107</fullName>
            </value>
            <value>
                <fullName>IL130</fullName>
            </value>
            <value>
                <fullName>IL210</fullName>
            </value>
            <value>
                <fullName>IL261</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>