force-app/main/default/objects/Policy_Premium_History__c/fields/X10x10_value__c.field-meta.xml
<CustomField>
    <fullName>X10x10_value__c</fullName>
    <label>10x10 value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>