force-app/main/default/objects/Policy_Premium_History__c/fields/X5x5_value__c.field-meta.xml
<CustomField>
    <fullName>X5x5_value__c</fullName>
    <label>5x5 value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>